fix: align items in navBar desktop

--- a/src/styles/menu/Menu.css
+++ b/src/styles/menu/Menu.css
@@ -13,20 +13,17 @@
   gap: 2rem;
   background-color: rgba(255, 255, 255, 0.95);
   z-index: 100;
-}
 
-.menu-items-desktop-container {
-  position: fixed;
-  top: 0;
-  padding: calc(var(--spacing-ref) * 10) calc(var(--spacing-ref) * 1.75)
-    calc(var(--spacing-ref) * 5) 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 2rem;
-  background-color: rgba(255, 255, 255, 0.95);
-  z-index: 100;
+  & :nth-child(1),
+  & :nth-child(2),
+  & :nth-child(3),
+  & :nth-child(4),
+  & :nth-child(5) {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
 
 .menu-items-desktop {
@@ -34,7 +31,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .MuiBottomNavigation-root {
